fix responsiveness on smaller screens

--- a/src/components/ecommerce/styles/Ecommerce.css
+++ b/src/components/ecommerce/styles/Ecommerce.css
@@ -18,11 +18,13 @@ body {
 }
 
 .container-ecommerce {
+  background-color: red;
   display: flex;
   flex-direction: column;
-  max-width: 100%;
   width: 100%;
-  min-height: 100vh;
+  max-width: 100%;
+  height: 100%;
+  min-height: 50vh;
 }
 
 .content-ecommerce {
@@ -53,7 +55,7 @@ p {
 .btn-ecommerce {
   color: #fff;
   width: 50%;
-  max-width: 300px; /* adjust as needed */
+  max-width: 300px;
   padding: 2rem;
   margin: 0 auto;
 }
